--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -1,7 +1,3 @@
-:root {
-  font-size: 40%;
-}
-
 #page-landing {
   background: var(--color-primary);
 }
@@ -88,4 +84,53 @@
 
 .total-connections img {
   margin-left: 0.8rem;
+}
+
+@media (max-width: 699px) {
+  :root {
+    font-size: 40%;
+  }
+}
+
+/* verificação onde o css só será aplicado de acordo com a condicão 
+(para telas Desktop) */
+@media (min-width: 1100px) {     
+  #page-landing #container {
+    max-width: 1100px;
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    grid-template-rows: 350px 1fr;
+    grid-template-areas: 
+    "proffy image image"
+    "button button texting";
+    gap: 60px;
+  }
+
+  .logo-container {
+    grid-area: proffy;
+    text-align: initial;
+    align-self: center;
+  }
+
+  .logo-container img {
+    height: 127px;
+  }
+
+  .people-image {
+    grid-area: image;
+    height: 350px;
+  }
+
+  .buttons-container {
+    grid-area: button;
+    justify-content: flex-start;
+    margin: 0;
+  }
+
+  .total-connections {
+    grid-area: texting;
+    justify-self: end;
+    font-size: 1.2rem;
+  }
+
 }
