Adding back-end

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,7 +10,8 @@
 
   <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
 
-  <script src="/scripts/main.js"></script>
+  
+
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/partials/page-landing.css">
   <link
@@ -52,11 +53,11 @@
 
     <!-- <img src="" alt="Logo"> alt -> Alternativa para o source (acessibilidade) -->
     <div class="buttons-container">
-      <a class="study" href="/study.html">
+      <a class="study" href="/study">
         <img src="/images/icons/study.svg" alt="Estudar">
         Estudar
       </a>
-      <a class="give-classes" href="/give-classes.html">
+      <a class="give-classes" href="/give-classes">
         <img src="/images/icons/give-classes.svg" alt="Dar aulas">
         Ensinar
       </a>
@@ -67,6 +68,8 @@
       <img src="/images/icons/purple-heart.svg" alt="Purple heart">
     </p>
   </div>
+
+  <script src="/scripts/addField.js"></script>
 
 </body>
 
