--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -127,7 +127,7 @@
       </footer>
     </main>
   </div>
-  <script src="/scripts/main.js"></script>
+  <script src="/scripts/addField.js"></script>
 </body>
 
 </html>
