--- a/src/views/study.html
+++ b/src/views/study.html
@@ -8,8 +8,6 @@
 
   <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
 
-  <script src="/scripts/main.js"></script>
-
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/partials/header.css">
   <link rel="stylesheet" href="/styles/partials/forms.css">
@@ -122,6 +120,8 @@
       </article>
     </main>
   </div>
+
+  <script src="/scripts/addField.js"></script>
 
 </body>
 
