--- a/public/styles/partials/page-study.css
+++ b/public/styles/partials/page-study.css
@@ -105,11 +105,12 @@
   display: block; /* Ajustar a quebra de linha para mobile */
 }
 
-.teacher-item footer button {
+.teacher-item footer .button {
   width: 20rem;
   height: 5.6rem;
   background: var(--color-secondary);
   color: var(--color-button-text);
+  text-decoration: none;
   border: 0;
   border-radius: .8rem;
   cursor: pointer;
@@ -123,7 +124,7 @@
   margin-left: 1.6rem;
 }
 
-.teacher-item footer button:hover {
+.teacher-item footer .button:hover {
   background: var(--color-secondary-dark);
 }
 
