--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -63,16 +63,9 @@
             <label for="subject"> Matéria</label>
             <select name="subject" id="subject" required>
               <option value="">Selecione uma opção</option>
-              <option value="1">Artes</option>
-              <option value="2">Biologia</option>
-              <option value="3">Ciências</option>
-              <option value="4">Educação Física</option>
-              <option value="5">Física</option>
-              <option value="6">Geografia</option>
-              <option value="7">História</option>
-              <option value="8">Matemática</option>
-              <option value="9">Português</option>
-              <option value="10">Química</option>
+              {%for subject in subjects%}
+                  <option value="{{loop.index}}">{{subject}}</option>
+                {%endfor%}
             </select>
           </div>
 
@@ -80,7 +73,7 @@
             <label for="cost">Custo da hora/aula
               <small>(R$)</small>
             </label>
-            <input type="cost" id="cost" type="number">
+            <input name="cost" type="cost" id="cost" type="number">
           </div>
         </fieldset>
 
@@ -94,13 +87,9 @@
               <label for="weekday">Dia da semana</label>
               <select name="weekday[]" required>
                 <option value="">Selecione uma opção</option>
-                <option value="0">Domingo</option>
-                <option value="1">Segunda-feira</option>
-                <option value="2">Terça-feira</option>
-                <option value="3">Quarta-feira</option>
-                <option value="4">Quinta-feira</option>
-                <option value="5">Sexta-feira</option>
-                <option value="6">Sábado</option>
+                {%for weekday in weekdays%}
+                  <option value="{{loop.index0}}">{{weekday}}</option>
+                {%endfor%}
               </select>
             </div>
 
