--- a/public/styles/partials/forms.css
+++ b/public/styles/partials/forms.css
@@ -56,3 +56,9 @@
   right: 1.6rem;
   bottom: 6.7px;
 }
+
+label small {
+  font-size: 1.2rem;
+  padding-left: 1.2rem;
+  color: var(--color-small-info);
+}
