Finalizing database structure

--- a/src/views/study.html
+++ b/src/views/study.html
@@ -60,6 +60,11 @@
 
     <main>
 
+      {% if proffys == "" %}
+        <p class="no-results">Nenhum professor encontrado com a sua pesquisa.</p>
+
+      {% else %}
+
       {%for proffy in proffys %}
         <article class="teacher-item">
         <header>
@@ -83,6 +88,8 @@
         </footer>
         </article>
       {%endfor%}
+
+      {% endif %}
 
 
     </main>
