--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#8257E5">
 
-  <title>Proffy | Sua plataforma de estudos online</title>
+  <title>MEC | Plataforma de mecânicos online</title>
 
   <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
   <link rel="stylesheet" href="/styles/main.css">
@@ -15,26 +15,6 @@
     href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
     rel="stylesheet">
 
-  <!--   <style>
-
-/*     .title  {
-      color: greenyellow;
-    }
-
-    #page h1 {
-      color: green;
-    }
-    
-    #page {
-      color: red;
-    }
-
-    h1 {
-      color: blue;
-    } */
-
-  </style> -->
-
 </head>
 
 
@@ -42,27 +22,26 @@
 
   <div id="container">
     <div class="logo-container">
-      <img src="/images/logo.svg" alt="Proffy">
-      <h2>Sua plataforma de estudos online.</h2>
+      <img src="/images/logo.png" alt="Mec">
+      <h2>Plataforma de mecânicos online.</h2>
     </div>
 
-    <img class=people-image src="/images/landing.svg" alt="">
+    <img class=people-image src="/images/mecanico-image.png" alt="Mechanic">
 
-    <!-- <img src="" alt="Logo"> alt -> Alternativa para o source (acessibilidade) -->
     <div class="buttons-container">
       <a class="study" href="/study">
-        <img src="/images/icons/study.svg" alt="Estudar">
-        Estudar
+        <img src="/images/icons/chave.png" alt="Estudar">
+        Mecânicos
       </a>
       <a class="give-classes" href="/give-classes">
-        <img src="/images/icons/give-classes.svg" alt="Dar aulas">
-        Ensinar
+        <img src="/images/icons/chave.png" alt="Dar aulas">
+        Concertar
       </a>
     </div>
 
     <p class="total-connections">
       Total de 200 conexões já realizadas
-      <img src="/images/icons/purple-heart.svg" alt="Purple heart">
+      <img src="/images/icons/capacete.png" alt="Purple heart">
     </p>
   </div>
 
