--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -8,15 +8,15 @@
 
 :root {
   --color-background: #F0F0F7;
-  --color-primary-lighter: #9871F5;
-  --color-primary-light: #916BEA;
-  --color-primary: #8257E5;
+  --color-primary-lighter: #7cacf4;
+  --color-primary-light: #6998df;
+  --color-primary: #5394f6;
   --color-primary-dark: #774DD6;
   --color-primary-darker: #6842c2;
-  --color-secondary: #04D361;
-  --color-secondary-dark: #04BF58;
+  --color-secondary: #2a49ed;
+  --color-secondary-dark: #1d37bd;
   --color-title-in-primary: #FFFFFF;
-  --color-text-in-primary: #D4C2FF;
+  --color-text-in-primary: #ffffff;
   --color-text-title: #32264D;
   --color-text-complement: #9C98A6;
   --color-text-base: #6A6180;
