--- a/src/views/index.html
+++ b/src/views/index.html
@@ -35,7 +35,7 @@
       </a>
       <a class="give-classes" href="/give-classes">
         <img src="/images/icons/chave.png" alt="Dar aulas">
-        Concertar
+        Consertar
       </a>
     </div>
 
