--- a/src/views/index.html
+++ b/src/views/index.html
@@ -29,20 +29,20 @@
     <img class=people-image src="/images/mecanico-image.png" alt="Mechanic">
 
     <div class="buttons-container">
-      <a class="study" href="/study">
+      <a class="mechanic" href="/study">
         <img src="/images/icons/chave.png" alt="Estudar">
         Mecânicos
       </a>
-      <a class="give-classes" href="/give-classes">
+      <a class="mechanic" href="/give-classes">
         <img src="/images/icons/chave.png" alt="Dar aulas">
         Consertar
       </a>
     </div>
 
-    <p class="total-connections">
-      Total de 200 conexões já realizadas
-      <img src="/images/icons/capacete.png" alt="Purple heart">
-    </p>
+      <p class="total-connections">
+        Total de 200 conexões já realizadas
+        <img src="/images/icons/capacete.png" alt="Purple heart">
+      </p>
   </div>
 
   <script src="/scripts/addField.js"></script>
