--- a/src/views/index.html
+++ b/src/views/index.html
@@ -33,7 +33,7 @@
         <img src="/images/icons/chave.png" alt="Estudar">
         Mecânicos
       </a>
-      <a class="mechanic" href="/give-classes">
+      <a class="repair" href="/give-classes">
         <img src="/images/icons/chave.png" alt="Dar aulas">
         Consertar
       </a>
