Updating styles and references

--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Proffy | Sua plataforma de estudos online</title>
+  <title>MEC | Plataforma de mecânicos online</title>
 
   <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
 
@@ -29,7 +29,7 @@
         <img src="/images/logo.svg" alt="Proffy">
       </div>
       <div class="header-content">
-        <strong>Venha compartilhar o seu conhecimento!</strong>
+        <strong>Venha compartilhar os seus serviços!</strong>
         <p>O primeiro passo, é preencher esse formulário de inscrição</p>
       </div>
     </header>
