--- a/src/views/index.html
+++ b/src/views/index.html
@@ -29,12 +29,12 @@
     <img class=people-image src="/images/mecanico-image.png" alt="Mechanic">
 
     <div class="buttons-container">
-      <a class="mechanic" href="/study">
-        <img src="/images/icons/chave.png" alt="Estudar">
+      <a class="mechanic" href="/mechanic">
+        <img src="/images/icons/chave.png" alt="Mecânicos">
         Mecânicos
       </a>
-      <a class="repair" href="/give-classes">
-        <img src="/images/icons/chave.png" alt="Dar aulas">
+      <a class="repair" href="/repair">
+        <img src="/images/icons/chave.png" alt="Consertar">
         Consertar
       </a>
     </div>
