--- a/src/views/study.html
+++ b/src/views/study.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Proffy | Sua plataforma de estudos online</title>
+  <title>MEC | Plataforma de mecânicos online</title>
 
   <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
 
@@ -61,7 +61,7 @@
     <main>
 
       {% if proffys == "" %}
-        <p class="no-results">Nenhum professor encontrado com a sua pesquisa.</p>
+        <p class="no-results">Nenhum mecânico encontrado com a sua pesquisa.</p>
 
       {% else %}
 
