--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -58,7 +58,7 @@
 
 
         <fieldset>
-          <legend>Sobre a aula</legend>
+          <legend>Sobre o serviço</legend>
           <div class="select-block">
             <label for="subject"> Matéria</label>
             <select name="subject" id="subject" required>
@@ -70,7 +70,7 @@
           </div>
 
           <div class="input-block">
-            <label for="cost">Custo da hora/aula
+            <label for="cost">Custo da hora/serviço
               <small>(R$)</small>
             </label>
             <input name="cost" type="cost" id="cost" type="number">
