--- a/src/views/study.html
+++ b/src/views/study.html
@@ -29,7 +29,7 @@
         <img src="/images/logo.svg" alt="Proffy">
       </div>
       <div class="header-content">
-        <strong>Esses são os proffys disponíveis</strong>
+        <strong>Esses são os mecânicos disponíveis</strong>
         <form id="search-teachers">
           <div class="select-block">
             <label for="subject">Matéria</label>
