--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -17,7 +17,7 @@
   --color-secondary-dark: #1d37bd;
   --color-title-in-primary: #FFFFFF;
   --color-text-in-primary: #ffffff;
-  --color-text-title: #32264D;
+  --color-text-title: #001d7c;
   --color-text-complement: #9C98A6;
   --color-text-base: #6A6180;
   --color-line-in-white: #E6E6F0;
