--- a/src/views/study.html
+++ b/src/views/study.html
@@ -26,7 +26,7 @@
         <a href="/">
           <img src="/images/icons/back.svg" alt="Back">
         </a>
-        <img src="/images/logo.svg" alt="Proffy">
+        <img src="/images/logo.png" alt="Mec">
       </div>
       <div class="header-content">
         <strong>Esses são os mecânicos disponíveis</strong>
