Updating services options

--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -60,7 +60,7 @@
         <fieldset>
           <legend>Sobre o serviço</legend>
           <div class="select-block">
-            <label for="subject"> Matéria</label>
+            <label for="subject"> Especialização</label>
             <select name="subject" id="subject" required>
               <option value="">Selecione uma opção</option>
               {%for subject in subjects%}
