Updating button hover color

--- a/public/styles/partials/page-give-classes.css
+++ b/public/styles/partials/page-give-classes.css
@@ -50,7 +50,7 @@
 
 #page-give-classes fieldset legend button:hover {
   transform: translateY(-5px);
-  color: var(--color-primary-dark);
+  color: var(--color-secondary);
 }
 
 
